NXP-32585: Upgrade to Jakarta EE 10